fixed nav-bar after breaking it and adjusted hero section for shows page for alignment of 2 columns

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -231,7 +231,9 @@ ul {
   $margin-bottom-mobile: 1rem,
   $margin-top-mobile: 1rem,
   $margin-bottom-tablet: 2.25rem,
-  $margin-top-tablet: 2.25rem
+  $margin-top-tablet: 2.25rem,
+  $margin-bottom-desktop: 3rem,
+  $margin-top-desktop: 3rem
 ) {
 
   @media (max-width: $mobile-width) {
@@ -242,6 +244,11 @@ ul {
   @media (min-width: $tablet-width) {
     margin-bottom: $margin-bottom-tablet;
     margin-top: $margin-top-tablet;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: $margin-bottom-desktop;
+    margin-top: $margin-top-desktop;
   }
 }
 
@@ -360,6 +367,10 @@ ul {
     flex-direction: row;
     padding-top: 2.5rem;
   }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 0;
+  }
   
   &__container {
     align-items: center;
@@ -371,17 +382,12 @@ ul {
 
   &__logo {
     // stylesheet specifies logo to always be 20px (1.25rem) x 120px (7.5rem)
-
-    @media (max-width: $mobile-width) {
-      @include margin-block($margin-top-mobile: 2rem, $margin-bottom-mobile: 0);
-      height: 1.25rem;
-      width: 7.5rem;
-    }
+    @include margin-block($margin-top-mobile: 2rem, $margin-bottom-mobile: 0, $margin-top-tablet: 0, $margin-bottom-tablet: 2rem, $margin-top-desktop: 2rem, $margin-bottom-desktop: 2rem);
+    height: 1.25rem;
+    width: 7.5rem;
 
     @media (min-width: $tablet-width) {
       @include margin-inline($margin-left-tablet: 3rem, $margin-right-tablet: 3rem);
-  
-      @include margin-block($margin-bottom-tablet: 2rem, $margin-top-tablet: 0);
     }
   }
   
